# any-template

./: .gitignore  CONTRIBUTING.md  README.md  any_template.py  requirements-dev.txt  setup.cfg
contents/: README.md
contents/adwaith/python-package/: .pre-commit-config.yml  setup.cfg
contents/pysondb-plugin/: main.py  setup.cfg
templates/: python-fast-api.json  python-simple-package.json
templates/adwaith/: python-package.json
templates/pysondb/: cli-plugin.json
