[metadata]
name = pysondb-<PluginName>
version = <verison-number>
author = <your-name>
author_email = <your-email>
description = <small description>
long_description = file: README.md
long_description_content_type = text/markdown
url = <github url>
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = main
python_requires = >=3.6.1

[options.entry_points]
pysondb.cli =
    plugin-name = main:Plugin  # change the plugin name, don't change the right side

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
